# PakScape

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: build.yml
DerivedData/Index.noindex/DataStore/v5/records/3C/: PakViewModel.swift-YEYP2SA5XC3C
DerivedData/Index.noindex/DataStore/v5/records/5E/: BspLevelPreviewRenderer.swift-14XO35I0MR5E
DerivedData/Index.noindex/DataStore/v5/records/OU/: BspLevelPreviewRenderer.swift-2LLWU41H0PEOU
DerivedData/Index.noindex/DataStore/v5/records/Z3/: PakViewModel.swift-3LO3H94Q8DSZ3
DerivedData/Index.noindex/DataStore/v5/units/: BspLevelPreviewRenderer.o-UN34XGEYO81I
PakExplorer/: ContentView.swift  PakDocument.swift  PakExplorerApp.swift  PakIconView.swift  PakListView.swift  PakModels.swift  PakViewModel.swift
PakExplorer.xcodeproj/project.xcworkspace/xcuserdata/timbergeron.xcuserdatad/: UserInterfaceState.xcuserstate
PakScape/: BspLevelPreviewRenderer.swift  ContentView.swift  PakExplorerApp.swift  PakIconView.swift  PakListView.swift  PakModels.swift  PakQuickLook.swift  PakViewModel.swift  PreferencesView.swift
PakScape.xcodeproj/: project.pbxproj
Tests/PakArchiveCoreTests/: PakArchiveCoreTests.swift
linux/: Directory.Build.props  PakScape.Linux.slnx  README.md
linux/PakScape.Linux/: App.axaml  App.axaml.cs  PakScape.Linux.csproj  Program.cs
linux/PakScape.Linux.Core/: PakScape.Linux.Core.csproj
linux/PakScape.Linux.Core/Services/: ArchiveService.cs  LinuxArchiveFileTransferService.cs  XdgRecentFilesService.cs
linux/PakScape.Linux.Tests/: LinuxArchiveFileTransferServiceTests.cs  PakScape.Linux.Tests.csproj
linux/PakScape.Linux/Models/: ArchiveItemViewModel.cs  FolderNodeViewModel.cs
linux/PakScape.Linux/Services/: ArchiveThumbnailService.cs  AvaloniaUserInteractionService.cs  IUserInteractionService.cs  MpvAudioPlayer.cs  PreviewImageFactory.cs
linux/PakScape.Linux/ViewModels/: MainWindowViewModel.cs
linux/PakScape.Linux/Views/: AboutWindow.cs  MainWindow.axaml  MainWindow.axaml.cs  MessageDialogWindow.cs  PreviewWindow.cs  TextInputDialogWindow.cs
linux/packaging/: build-deb.sh  copyright  debian-control.in  io.github.timbergeron.PakScape.desktop  io.github.timbergeron.PakScape.xml  postinst
macos/: Info.plist  Package.swift  README.md
macos/PakScape/: BspLevelPreviewRenderer.swift  ContentView.swift  FinderServices.swift  NativeAudioPlayer.swift  PakDocument.swift  PakExplorerApp.swift  PakFormatDetails.swift  PakIconView.swift  PakItemInfo.swift  PakListView.swift  PakModels.swift  PakQuickLook.swift  PakScape-Bridging-Header.h  PakViewModel.swift
macos/PakScape.xcodeproj/: project.pbxproj
macos/PakScape/Assets.xcassets/AppIcon.appiconset/: Contents.json
macos/Tests/PakArchiveCoreTests/: PakArchiveCoreTests.swift
native/: CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  exports-linux.map  exports-macos.txt
native/include/: pakscape_audio.h
native/scripts/: build-linux.sh  build-macos.sh  build-windows.ps1
native/src/: pakscape_audio.cpp
native/tests/: api_tests.cpp
windows/: Directory.Build.props  PakStudio.sln  README.md
windows/PakStudio.App/: App.xaml  App.xaml.cs  PakStudio.App.csproj
windows/PakStudio.App/Commands/: AsyncRelayCommand.cs  AsyncRelayCommandOfT.cs  ObservableObject.cs  RelayCommand.cs
windows/PakStudio.App/Converters/: ArchiveViewModeEqualsConverter.cs  ArchiveViewModeToVisibilityConverter.cs
windows/PakStudio.App/Helpers/: BindingProxy.cs
windows/PakStudio.App/Models/: SampleDocumentFactory.cs
windows/PakStudio.App/Services/: ArchiveFileTransferService.cs  ArchiveService.cs  ArchiveThumbnailService.cs  FileDialogService.cs  GlyphIconService.cs  JsonRecentFilesService.cs  MessageBoxService.cs  PreviewImageFactory.cs  SystemThemeService.cs  TextInputService.cs
windows/PakStudio.App/Themes/: Colors.xaml  Controls.xaml  DarkColors.xaml  ListViews.xaml  Toolbars.xaml  TreeViews.xaml  Typography.xaml
windows/PakStudio.App/ViewModels/: ArchiveItemViewModel.cs  FolderTreeNodeViewModel.cs  MainWindowViewModel.cs  ViewModelBase.cs
windows/PakStudio.App/Views/: AboutWindow.xaml  AboutWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MessageDialogWindow.xaml  MessageDialogWindow.xaml.cs  PreviewWindow.xaml  PreviewWindow.xaml.cs  TextInputDialog.xaml  TextInputDialog.xaml.cs
windows/PakStudio.Core/Audio/: NativeAudioPlayer.cs
windows/PakStudio.Core/Documents/: ArchiveDocument.cs  ArchiveViewMode.cs  SaveChangesDecision.cs
windows/PakStudio.Core/Interfaces/: IArchiveFileTransferService.cs  IArchiveFormatHandler.cs  IArchiveFormatRegistry.cs  IArchiveService.cs  IFileDialogService.cs  IIconService.cs  IMessageBoxService.cs  IRecentFilesService.cs  ITextInputService.cs
windows/PakStudio.Core/Nodes/: ArchiveFileEntry.cs  ArchiveFileNode.cs  ArchiveFolderNode.cs  ArchiveNode.cs
windows/PakStudio.Core/Operations/: ArchiveTreeBuilder.cs  ArchiveTreeEditor.cs
windows/PakStudio.Core/Pathing/: PathHelper.cs
windows/PakStudio.Core/Preview/: ArchivePreview.cs  ArchivePreviewBuilder.cs  EncodedImageInspector.cs  QuakePreviewDecoder.cs
windows/PakStudio.Core/Validation/: ArchiveExceptions.cs  ArchiveNameValidator.cs  ArchiveSafetyLimits.cs  WindowsFileNameValidator.cs
windows/PakStudio.Formats/: PakStudio.Formats.csproj
windows/PakStudio.Formats/Common/Binary/: LittleEndianReader.cs
windows/PakStudio.Formats/Pak/: ArchiveFormatRegistry.cs  PakFormatHandler.cs
windows/PakStudio.Formats/Pk3/: Pk3FormatHandler.cs
windows/PakStudio.Tests/: ArchivePreviewBuilderTests.cs  ArchiveSafetyTests.cs  ArchiveTreeBuilderTests.cs  ArchiveTreeEditorTests.cs  NativeAudioPlayerTests.cs  PakFormatHandlerTests.cs  PakStudio.Tests.csproj  PathHelperTests.cs  Pk3FormatHandlerTests.cs
